1.6.6:
  - Update wagon builder to py2py3 wagon.
1.6.5:
  - Add test-requirements and fix setup.py.
  - Add rhel wagon build.
1.6.4:
  - Python 3 support.
1.6.3:
  - Forwarding rule and instance group fixes.
1.6.2:
  - Handle unstable network.
1.6.1:
  - Fix tear down of GKE
1.6.0:
  - Improve validatation of account credentials
1.5.1: Support newlines in gcp_config['auth']['private_key']
1.5.0: Support resumable actions.
1.4.5: Remove duplicate keys in plugin.yaml.
1.4.2: Support External resource for remaining resources.
1.4.1:
  - Fix issue missing resource_id for network,firewall,subnet.
1.4.0:
  - Project Node Type.
  - Internal Load Balancer DBaaS Blueprint.
  - Separate Global Forwarding Rule and Forwarding Rule. **Breaking change.**
  - Pub/Sub.
1.3.0.1:
  - Fix issue with disk detach.
1.3.0:
  - Add SSL Proxy and TCP Proxy.
1.2.0:
  - GKE cluster, node-pool, monitoring, network policy, and legacy abac.
  - VPC Peering.
1.1.0:
  - GCP-48 support metadata in additional_settings
  - GCP-49 expose public_ip_address on Instances with a public address
  - GCP-50 enable startup_script input directly as a string
  - (GCP-51 add missing zones)
  - GCP-44 fetch availability zones from API
  - switched unit test runner from nose to pytest
1.0.1:
  - GCP-43 Instance add & delete access config methods now wait for the
    operation to finish.
1.0:
  - new Cloud DNS support
  - New SubNetwork node type
  - Network node type now supports auto- and manual-subnet operation instead
    of legacy networks
  - New Route node type
  - New Address node type
  - GlobalAddress node type replaces StaticIP
  - Node Instances which map directly to a GCP entity now
    store the entire GCP resource data in their runtime_properties.
  - Removed `resource_id` property from node types which support
    `use_external_resource`