@@ -1,5 +1,6 @@
 1.6.6:
   - Update wagon builder to py2py3 wagon.
+  - Added 5.1.0 integration tests.
 1.6.5:
   - Add test-requirements and fix setup.py.
   - Add rhel wagon build.
